# base_detection

./: README.md  package.xml  setup.cfg  setup.py
base_detection/: base_detection.py  base_detection_v1.1.py  base_detection_v1.2.py  clustering.py  configs.py  coordinate_processor.py  coordinate_receiver.py  package_detector_node.py  parameters.py  publish_fake_bases.py  shutdown_client.py  test_grey_filter.py  utils.py  variables.py  visualization.py
config/: clustering_config.yaml  params.yaml
launch/: base_detection.launch.py  fine_tuning.launch.py  package_detection.launch.py
